[package]
name = "remarkers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2.28"
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
flate2 = "1.0.33"
image = "0.25.2"
imageproc = "0.25.0"
nom = "7.1"
printpdf = "0.5"
rstest = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
show-image = { version = "0.14.0", features = ["image"] }
ssh2 = "0.9.4"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "std", "env-filter"] }
uuid = { version = "1.3", features = ["v4"] }
