[package]
name = "remarkers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusttype = "0.9"
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
flate2 = "1.0.33"
image = "0.24.9"
imageproc = "0.23"
nom = "7.1"
printpdf = "0.5"
rstest = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
show-image = { version = "0.13", features = ["image"] }
ssh2 = "0.9.4"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "std", "env-filter"] }
uuid = { version = "1.3", features = ["v4"] }
